Chat: Fix mention badge on iOS (#1351)

--- a/src/components/left/main/Badge.scss
+++ b/src/components/left/main/Badge.scss
@@ -72,6 +72,15 @@
       font-size: 1rem;
       vertical-align: super;
     }
+
+    body.is-ios & {
+      width: 1.375rem;
+      padding: 0.25rem;
+
+      i {
+        font-size: .875rem;
+      }
+    }
   }
 }
 
